syntax = "proto3";
option java_multiple_files = true;
option java_outer_classname = "EmployeServiceProto";
option java_package = "com.grpc.grpcService";

message EmployeeRequest{
	string firstName = 1;
	string lastName = 2;
}

message EmployeeResponse{
	string isExistMessage = 1;
}

service EmployeeService{
	rpc getEmployee(EmployeeRequest) returns (EmployeeResponse);
}
